Lots of file cleanup Moved over to Bootstrap icons from Themify TODO: Clean up gulp file

--- a/404.html
+++ b/404.html
@@ -36,11 +36,13 @@ FACEBOOK: https://www.facebook.com/themefisher
   
   <!-- PLUGINS CSS STYLE -->
   <link rel="stylesheet" href="plugins/bootstrap/bootstrap.min.css">
-  <link rel="stylesheet" href="plugins/themify-icons/themify-icons.css">
   <link rel="stylesheet" href="plugins/slick/slick.css">
   <link rel="stylesheet" href="plugins/slick/slick-theme.css">
   <link rel="stylesheet" href="plugins/fancybox/jquery.fancybox.min.css">
   <link rel="stylesheet" href="plugins/aos/aos.css">
+
+	<!-- ADDITIONAL CSS -->
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css">
 
   <!-- CUSTOM CSS -->
   <link href="css/style.css" rel="stylesheet">
@@ -65,7 +67,7 @@ FACEBOOK: https://www.facebook.com/themefisher
 
   <!-- To Top -->
   <div class="scroll-top-to">
-    <i class="ti-angle-up"></i>
+    <i class="bi-arrow-up-short"></i>
   </div>
   
   <!-- JAVASCRIPTS -->
@@ -75,9 +77,6 @@ FACEBOOK: https://www.facebook.com/themefisher
   <script src="plugins/fancybox/jquery.fancybox.min.js"></script>
   <script src="plugins/syotimer/jquery.syotimer.min.js"></script>
   <script src="plugins/aos/aos.js"></script>
-  <!-- google map -->
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAgeuuDfRlweIs7D6uo4wdIHVvJ0LonQ6g"></script>
-  <script src="plugins/google-map/gmap.js"></script>
   
   <script src="js/script.js"></script>
 </body>
