--- a/index.html
+++ b/index.html
@@ -36,11 +36,13 @@ FACEBOOK: https://www.facebook.com/themefisher
   
   <!-- PLUGINS CSS STYLE -->
   <link rel="stylesheet" href="plugins/bootstrap/bootstrap.min.css">
-  <link rel="stylesheet" href="plugins/themify-icons/themify-icons.css">
   <link rel="stylesheet" href="plugins/slick/slick.css">
   <link rel="stylesheet" href="plugins/slick/slick-theme.css">
   <link rel="stylesheet" href="plugins/fancybox/jquery.fancybox.min.css">
   <link rel="stylesheet" href="plugins/aos/aos.css">
+
+	<!-- ADDITIONAL CSS -->
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css">
 
   <!-- CUSTOM CSS -->
   <link href="css/style.css" rel="stylesheet">
@@ -55,7 +57,6 @@ FACEBOOK: https://www.facebook.com/themefisher
     <a class="navbar-brand" href="index.html"><img src="images/logo.png" alt="logo"></img></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
       aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="ti-menu"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav ml-auto">
@@ -112,19 +113,19 @@ FACEBOOK: https://www.facebook.com/themefisher
 		<div class="rounded shadow p-5 bg-gray">
 			<div class="row">
 				<div class="col-lg-4 col-md-6 mt-5 mt-md-0 text-center">
-					<i class="ti-paint-bucket text-primary h1"></i>
+					<i class="bi-1-circle text-primary h1"></i>
 					<h3 class="mt-4 text-capitalize h5 ">themes made easy</h3>
 					<p class="regular text-muted">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam non, recusandae
 						tempore ipsam dignissimos molestias.</p>
 				</div>
 				<div class="col-lg-4 col-md-6 mt-5 mt-md-0 text-center">
-					<i class="ti-shine text-primary h1"></i>
+					<i class="bi-2-circle text-primary h1"></i>
 					<h3 class="mt-4 text-capitalize h5 ">powerful design</h3>
 					<p class="regular text-muted">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam non, recusandae
 						tempore ipsam dignissimos molestias.</p>
 				</div>
 				<div class="col-lg-4 col-md-12 mt-5 mt-lg-0 text-center">
-					<i class="ti-thought text-primary h1"></i>
+					<i class="bi-3-circle text-primary h1"></i>
 					<h3 class="mt-4 text-capitalize h5 ">creative content</h3>
 					<p class="regular text-muted">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam non, recusandae
 						tempore ipsam dignissimos molestias.</p>
@@ -239,7 +240,7 @@ FACEBOOK: https://www.facebook.com/themefisher
 							<!-- Service 01 -->
 							<div class="service-item">
 								<!-- Icon -->
-								<i class="ti-bookmark"></i>
+								<i class="bi-bookmark"></i>
 								<!-- Heading -->
 								<h3>Easy Prototyping</h3>
 								<!-- Description -->
@@ -250,7 +251,7 @@ FACEBOOK: https://www.facebook.com/themefisher
 							<!-- Service 01 -->
 							<div class="service-item">
 								<!-- Icon -->
-								<i class="ti-pulse"></i>
+								<i class="bi-heart-pulse"></i>
 								<!-- Heading -->
 								<h3>Sensor Bridge</h3>
 								<!-- Description -->
@@ -261,7 +262,7 @@ FACEBOOK: https://www.facebook.com/themefisher
 							<!-- Service 01 -->
 							<div class="service-item">
 								<!-- Icon -->
-								<i class="ti-bar-chart"></i>
+								<i class="bi-bar-chart"></i>
 								<!-- Heading -->
 								<h3>Strategist</h3>
 								<!-- Description -->
@@ -272,7 +273,7 @@ FACEBOOK: https://www.facebook.com/themefisher
 							<!-- Service 01 -->
 							<div class="service-item">
 								<!-- Icon -->
-								<i class="ti-panel"></i>
+								<i class="bi-box-fill"></i>
 								<!-- Heading -->
 								<h3>Art Direction</h3>
 								<!-- Description -->
@@ -296,21 +297,8 @@ FACEBOOK: https://www.facebook.com/themefisher
 					<br>We say you won’t look back.</p>
 				<ul class="list-inline">
 					<li class="list-inline-item">
-						<a href="" class="btn btn-rounded-icon">
-							<i class="ti-apple"></i>
-							Iphone
-						</a>
-					</li>
-					<li class="list-inline-item">
-						<a href="" class="btn btn-rounded-icon">
-							<i class="ti-android"></i>
-							Android
-						</a>
-					</li>
-					<li class="list-inline-item">
-						<a href="" class="btn btn-rounded-icon">
-							<i class="ti-microsoft-alt"></i>
-							Windows
+						<a href="" class="btn btn-rounded-icon font-weight-bold">
+							GET STARTED
 						</a>
 					</li>
 				</ul>
@@ -328,13 +316,7 @@ FACEBOOK: https://www.facebook.com/themefisher
       <div class="row">
         <div style="margin:auto;">
           <div class="block">
-            <!-- <a h1 href="index.html"><img src="images/logo-alt.png" alt="footer-logo"></a> -->
-            <!-- Social Site Icons -->
-            <ul class="social-icon list-inline">
-              <li class="list-inline-item">
-                <a href="https://www.github.com/stickms/hophacks23"><i class="ti-github"></i></a>
-              </li>
-            </ul>
+						<a href="https://www.github.com/stickms/hophacks23" class="btn-rounded-icon font-weight-bold">Github</a>
           </div>
         </div>
       </div>
@@ -345,7 +327,7 @@ FACEBOOK: https://www.facebook.com/themefisher
 
   <!-- To Top -->
   <div class="scroll-top-to">
-    <i class="ti-angle-up"></i>
+    <i class="bi-arrow-up-short"></i>
   </div>
   
   <!-- JAVASCRIPTS -->
@@ -353,13 +335,9 @@ FACEBOOK: https://www.facebook.com/themefisher
   <script src="plugins/bootstrap/bootstrap.min.js"></script>
   <script src="plugins/slick/slick.min.js"></script>
   <script src="plugins/fancybox/jquery.fancybox.min.js"></script>
-  <script src="plugins/syotimer/jquery.syotimer.min.js"></script>
   <script src="plugins/aos/aos.js"></script>
-  <!-- google map -->
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAgeuuDfRlweIs7D6uo4wdIHVvJ0LonQ6g"></script>
-  <script src="plugins/google-map/gmap.js"></script>
-  
-  <script src="js/script.js"></script>
+
+	<script src="js/script.js"></script>
 </body>
 
 </html>
