Added p5.js, .gitignore

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ FACEBOOK: https://www.facebook.com/themefisher
 			<div class="col-md-6 order-2 order-md-1 text-center text-md-left">
 				<h1 class="font-weight-bold mb-4" style="color:#fcfcfc">Jayway</h1>
 				<p class="mb-5 font-weight-bold" style="color:#fcfcfc">Your automated course compass</p>
-				<a href="FAQ.html" class="btn btn-main-md font-weight-bold" style="color:#fcfcfc">Start</a>
+				<a href="app.html" class="btn btn-main-md font-weight-bold">Start</a>
 			</div>
 			<div class="col-md-6 text-center order-1 order-md-2">
 				<img class="img-fluid" src="images/logo.png" alt="logo" style="padding:50px;">
