--- a/app.html
+++ b/app.html
@@ -2,6 +2,22 @@
   <head>
     <script src="plugins/p5/p5.min.js"></script>
     <script src="js/app.js"></script>
+
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins">
+
+    <style>
+      html, body {
+        height: 100%;
+        background-color: #99E1D9;
+      }
+      
+      body {
+        margin: 0;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
+    </style>
   </head>
   <body>
     <main>
