--- a/team.html
+++ b/team.html
@@ -43,6 +43,7 @@ FACEBOOK: https://www.facebook.com/themefisher
 
 	<!-- ADDITIONAL CSS -->
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css">
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins">
 
   <!-- CUSTOM CSS -->
   <link href="css/style.css" rel="stylesheet">
