--- a/app.html
+++ b/app.html
@@ -4,23 +4,13 @@
     <script src="js/app.js"></script>
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins">
-
-    <style>
-      html, body {
-        height: 100%;
-        background-color: #99E1D9;
-      }
-      
-      body {
-        margin: 0;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-      }
-    </style>
+    <link rel="stylesheet" href="css/app.css">
   </head>
   <body>
     <main>
+      <div class="gendiv">
+        <span id="generation" class="generation center" style="display:none;"></span>
+      </div>
     </main>
   </body>
 </html>
