Edited navbar styling Edited teampage (WIP)

--- a/team.html
+++ b/team.html
@@ -21,7 +21,7 @@ FACEBOOK: https://www.facebook.com/themefisher
   <!-- Basic Page Needs
   ================================================== -->
   <meta charset="utf-8">
-  <title>Small Apps | Bootstrap App Landing Template</title>
+  <title>Jayway | Our Team</title>
 
   <!-- Mobile Specific Metas
   ================================================== -->
@@ -83,7 +83,7 @@ FACEBOOK: https://www.facebook.com/themefisher
 				<!-- Page Title -->
 				<h1>Our Team</h1>
 				<!-- Page Description -->
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde, beatae atque dolorum impedit provident veritatis inventore similique deserunt suscipit quae.</p>
+				<p>Dedicated to a next-generation college experience</p>
 			</div>
 		</div>
 	</div>
@@ -91,66 +91,16 @@ FACEBOOK: https://www.facebook.com/themefisher
 
 <!--====  End of Page Title  ====-->
 
-
-<!--==================================
-=            Feature Team            =
-===================================-->
-<section class="founders section pt-0">
-	<div class="container">
-		<div class="row">
-			<div class="col-lg-6">
-				<!-- Featured Member -->
-<div class="founder">
-	<!-- Member Image -->
-	<img class="w-100" src="images/team/featured-person-01.jpg" alt="featured-member">
-	<!-- Name -->
-	<h2>Elon Musk</h2>
-	<!-- position -->
-	<cite>Founder & CEO</cite>
-	<!-- Description -->
-	<p>Vivamus magna justo, lacinia eget consectetur sed, convallis at tellus. Vestibulum ac diam sit amet quam vehicula elementum sed sit amet dui. Vivamus suscipit tortor eget felis porttitor volutpat. Sed porttitor lectus nibh. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Donec velit neque, auctor sit amet aliquam vel, ullamcorper sit amet ligula. Proin eget tortor risus. Nulla porttitor accumsan tincidunt.</p>
-	<!-- Social Sites -->
-	<ul class="list-inline social-links">
-		<li class="list-inline-item"><a href="https://themefisher.com/"><i class="bi-facebook"></i></a></li>
-		<li class="list-inline-item"><a href="https://themefisher.com/"><i class="bi-twitter"></i></a></li>
-		<li class="list-inline-item"><a href="https://themefisher.com/"><i class="bi-instagram"></i></a></li>
-	</ul>
-</div>
-			</div>
-			<div class="col-lg-6">
-				<!-- Featured Member -->
-<div class="founder">
-	<!-- Member Image -->
-	<img class="w-100" src="images/team/featured-person-02.jpg" alt="featured-member">
-	<!-- Name -->
-	<h2>Sergey Brin</h2>
-	<!-- position -->
-	<cite>Founder & CEO</cite>
-	<!-- Description -->
-	<p>Vivamus magna justo, lacinia eget consectetur sed, convallis at tellus. Vestibulum ac diam sit amet quam vehicula elementum sed sit amet dui. Vivamus suscipit tortor eget felis porttitor volutpat. Sed porttitor lectus nibh. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Donec velit neque, auctor sit amet aliquam vel, ullamcorper sit amet ligula. Proin eget tortor risus. Nulla porttitor accumsan tincidunt.</p>
-	<!-- Social Sites -->
-	<ul class="list-inline social-links">
-		<li class="list-inline-item"><a href="https://themefisher.com/"><i class="bi-facebook"></i></a></li>
-		<li class="list-inline-item"><a href="https://themefisher.com/"><i class="bi-twitter"></i></a></li>
-		<li class="list-inline-item"><a href="https://themefisher.com/"><i class="bi-instagram"></i></a></li>
-	</ul>
-</div>
-			</div>
-		</div>
-	</div>
-</section>
-<!--====  End of Feature Team  ====-->
-
 <!--=================================
-=            Design Team            =
+=            Core Team            =
 ==================================-->
 <section class="design-team section pt-0">
 	<div class="container">
 		<div class="row">
 			<div class="col-lg-12">
 				<div class="section-title">
-					<h2>Design Team</h2>
-					<p><a href="https://themefisher.com/products/small-apps-free-app-landing-page-template/">Small Apps</a> makes it easy to stay on top of your Life Style. No late tasks. No gimmicks.</p>
+					<h2>Core Team</h2>
+					<p>Working directly on the Jayway project</p>
 				</div>
 			</div>
 		</div>
@@ -160,20 +110,19 @@ FACEBOOK: https://www.facebook.com/themefisher
 <div class="team-sm">
 	<!-- Team Member Image -->
 	<div class="image">
-		<img class="w-100" src="images/team/design-team-01.jpg" alt="member-image">
-		<!-- Social Contacts -->
-		<div class="social-links">
-			<ul class="list-inline">
-				<li class="list-inline-item"><a href="https://themefisher.com/"><i class="bi-facebook"></i></a></li>
-				<li class="list-inline-item"><a href="https://themefisher.com/"><i class="bi-twitter"></i></a></li>
-				<li class="list-inline-item"><a href="https://themefisher.com/"><i class="bi-instagram"></i></a></li>
-			</ul>
-		</div>
+		<img class="w-100" src="images/team/drake.png" alt="member-image">
 	</div>
 	<!-- Name -->
-	<h3>Jonathon Andrew</h3>
+	<h3>Mahmoud Said</h3>
 	<!-- Position -->
-	<cite>Head Of Marketing</cite>
+	<div class="social-links">
+		<ul class="list-inline">
+			<cite>Fullstack Developer &emsp;</cite>
+			<li class="list-inline-item"><a href=""><i class="bi-github"></i></a></li>
+			<li class="list-inline-item"><a href=""><i class="bi-twitter"></i></a></li>
+			<li class="list-inline-item"><a href=""><i class="bi-envelope"></i></a></li>
+		</ul>
+	</div>
 	<!-- Description -->
 	<p>Vivamus magna justo, lacinia eget consectetur sed, convallis at tellus. Vestibulum ac diam sit amet quam vehicula elementum sed sit amet dui. Vivamus suscipit tortor eget felis porttitor volutpat.</p>
 </div>
@@ -183,22 +132,21 @@ FACEBOOK: https://www.facebook.com/themefisher
 <div class="team-sm">
 	<!-- Team Member Image -->
 	<div class="image">
-		<img class="w-100" src="images/team/design-team-02.jpg" alt="member-image">
-		<!-- Social Contacts -->
-		<div class="social-links">
-			<ul class="list-inline">
-				<li class="list-inline-item"><a href="https://themefisher.com/"><i class="bi-facebook"></i></a></li>
-				<li class="list-inline-item"><a href="https://themefisher.com/"><i class="bi-twitter"></i></a></li>
-				<li class="list-inline-item"><a href="https://themefisher.com/"><i class="bi-instagram"></i></a></li>
-			</ul>
-		</div>
+		<img class="w-100" src="images/team/drake.png" alt="member-image">
 	</div>
 	<!-- Name -->
-	<h3>Jonathon Andrew</h3>
+	<h3>Mohammed Siam</h3>
 	<!-- Position -->
-	<cite>Head Of Marketing</cite>
+	<div class="social-links">
+		<ul class="list-inline">
+			<cite>Backend Developer &emsp;</cite>
+			<li class="list-inline-item"><a href=""><i class="bi-github"></i></a></li>
+			<li class="list-inline-item"><a href=""><i class="bi-twitter"></i></a></li>
+			<li class="list-inline-item"><a href=""><i class="bi-envelope"></i></a></li>
+		</ul>
+	</div>
 	<!-- Description -->
-	<p>Vivamus magna justo, lacinia eget consectetur sed, convallis at tellus. Vestibulum ac diam sit amet quam vehicula elementum sed sit amet dui. Vivamus suscipit tortor eget felis porttitor volutpat.</p>
+	<p>Meet Mohammed Siam, the "Backend Beatboxer" from Bangladesh, whose code runs smoother than his dance moves, which are alarmingly akin to a malfunctioning robot. He's the guy who once wrote an algorithm for making perfect toast, just to prove he could. Mohammed, with his keyboard prowess, turns bugs into features and can turn your dull data into a symphony of ones and zeros. If you ever need a laugh with your code, he's the man to call!</p>
 </div>
 			</div>
 			<div class="col-lg-4 col-md-6">
@@ -206,62 +154,70 @@ FACEBOOK: https://www.facebook.com/themefisher
 <div class="team-sm">
 	<!-- Team Member Image -->
 	<div class="image">
-		<img class="w-100" src="images/team/design-team-03.jpg" alt="member-image">
-		<!-- Social Contacts -->
-		<div class="social-links">
-			<ul class="list-inline">
-				<li class="list-inline-item"><a href="https://themefisher.com/"><i class="bi-facebook"></i></a></li>
-				<li class="list-inline-item"><a href="https://themefisher.com/"><i class="bi-twitter"></i></a></li>
-				<li class="list-inline-item"><a href="https://themefisher.com/"><i class="bi-instagram"></i></a></li>
-			</ul>
-		</div>
+		<img class="w-100" src="images/team/drake.png" alt="member-image">
 	</div>
 	<!-- Name -->
-	<h3>Jonathon Andrew</h3>
+	<h3>Pranav Gadiraju</h3>
 	<!-- Position -->
-	<cite>Head Of Marketing</cite>
+	<div class="social-links">
+		<ul class="list-inline">
+			<cite>Backend Developer &emsp;</cite>
+			<li class="list-inline-item"><a href=""><i class="bi-github"></i></a></li>
+			<li class="list-inline-item"><a href=""><i class="bi-twitter"></i></a></li>
+			<li class="list-inline-item"><a href=""><i class="bi-envelope"></i></a></li>
+		</ul>
+	</div>
 	<!-- Description -->
-	<p>Vivamus magna justo, lacinia eget consectetur sed, convallis at tellus. Vestibulum ac diam sit amet quam vehicula elementum sed sit amet dui. Vivamus suscipit tortor eget felis porttitor volutpat.</p>
+	<p>Dubbed the "Byte-sized Backend Maestro," hails from a family of technophobes who once called Google "The Goggles." He turned their tech faux pas into motivation, coding his way to glory with a keyboard mightier than any swordfish. His superpower? Debugging bugs faster than his grandma can knit sweaters. With Pranav on the backend, the digital world has never been safer... unless you count his coffee spills.</p>
 </div>
 			</div>
 		</div>
-	</div>
-</section>
-<!--====  End of Design Team  ====-->
 
-<!--=================================
-=            Marketing Team         =
-==================================-->
-<section class="design-team section pt-0">
-	<div class="container">
-		<div class="row">
-			<div class="col-lg-12">
-				<div class="section-title">
-					<h2>Marketing Team</h2>
-					<p><a href="https://themefisher.com/products/small-apps-free-app-landing-page-template/">Small Apps</a> makes it easy to stay on top of your Life Style. No late tasks. No gimmicks.</p>
-				</div>
-			</div>
-		</div>
 		<div class="row">
 			<div class="col-lg-4 col-md-6">
 				<!-- Team -->
 <div class="team-sm">
 	<!-- Team Member Image -->
 	<div class="image">
-		<img class="w-100" src="images/team/marketing-team-01.jpg" alt="member-image">
-		<!-- Social Contacts -->
-		<div class="social-links">
-			<ul class="list-inline">
-				<li class="list-inline-item"><a href="https://themefisher.com/"><i class="bi-facebook"></i></a></li>
-				<li class="list-inline-item"><a href="https://themefisher.com/"><i class="bi-twitter"></i></a></li>
-				<li class="list-inline-item"><a href="https://themefisher.com/"><i class="bi-instagram"></i></a></li>
-			</ul>
-		</div>
+		<img class="w-100" src="images/team/drake.png" alt="member-image">
+	</div>
+
+	<!-- Name -->
+	<h3>Ahmad Tabbara</h3>
+
+	<!-- Title + Social Links -->
+	<div class="social-links">
+		<ul class="list-inline">
+			<cite>Data Analyst &emsp;</cite>
+			<li class="list-inline-item"><a href=""><i class="bi-github"></i></a></li>
+			<li class="list-inline-item"><a href=""><i class="bi-twitter"></i></a></li>
+			<li class="list-inline-item"><a href=""><i class="bi-envelope"></i></a></li>
+		</ul>
+	</div>
+
+	<!-- Position -->
+	<!-- Description -->
+	<p>Ahmad Tabbara, the "Data Whisperer," discovered his knack for analyzing data when he mistook his grocery list for a statistical model to optimize snack choices. Armed with a spreadsheet and a love for pie charts (the edible kind), he can predict your next binge-watching session with eerie accuracy. Ahmad's favorite pastime? Finding hidden patterns in cat videos, proving that even feline behavior follows data trends. His friends call him the "Data Diviner" because he once predicted a 98% chance of rain and got soaked by a passing ice cream truck instead!</p>
+</div>
+			</div>
+			<div class="col-lg-4 col-md-6">
+				<!-- Team -->
+<div class="team-sm">
+	<!-- Team Member Image -->
+	<div class="image">
+		<img class="w-100" src="images/team/drake.png" alt="member-image">
 	</div>
 	<!-- Name -->
 	<h3>Jonathon Andrew</h3>
 	<!-- Position -->
-	<cite>Head Of Marketing</cite>
+	<div class="social-links">
+		<ul class="list-inline">
+			<cite>Head Of Marketing &emsp;</cite>
+			<li class="list-inline-item"><a href=""><i class="bi-github"></i></a></li>
+			<li class="list-inline-item"><a href=""><i class="bi-twitter"></i></a></li>
+			<li class="list-inline-item"><a href=""><i class="bi-envelope"></i></a></li>
+		</ul>
+	</div>
 	<!-- Description -->
 	<p>Vivamus magna justo, lacinia eget consectetur sed, convallis at tellus. Vestibulum ac diam sit amet quam vehicula elementum sed sit amet dui. Vivamus suscipit tortor eget felis porttitor volutpat.</p>
 </div>
@@ -271,43 +227,19 @@ FACEBOOK: https://www.facebook.com/themefisher
 <div class="team-sm">
 	<!-- Team Member Image -->
 	<div class="image">
-		<img class="w-100" src="images/team/marketing-team-02.jpg" alt="member-image">
-		<!-- Social Contacts -->
-		<div class="social-links">
-			<ul class="list-inline">
-				<li class="list-inline-item"><a href="https://themefisher.com/"><i class="bi-facebook"></i></a></li>
-				<li class="list-inline-item"><a href="https://themefisher.com/"><i class="bi-twitter"></i></a></li>
-				<li class="list-inline-item"><a href="https://themefisher.com/"><i class="bi-instagram"></i></a></li>
-			</ul>
-		</div>
+		<img class="w-100" src="images/team/drake.png" alt="member-image">
 	</div>
 	<!-- Name -->
 	<h3>Jonathon Andrew</h3>
 	<!-- Position -->
-	<cite>Head Of Marketing</cite>
-	<!-- Description -->
-	<p>Vivamus magna justo, lacinia eget consectetur sed, convallis at tellus. Vestibulum ac diam sit amet quam vehicula elementum sed sit amet dui. Vivamus suscipit tortor eget felis porttitor volutpat.</p>
-</div>
-			</div>
-			<div class="col-lg-4 col-md-6">
-				<!-- Team -->
-<div class="team-sm">
-	<!-- Team Member Image -->
-	<div class="image">
-		<img class="w-100" src="images/team/marketing-team-03.jpg" alt="member-image">
-		<!-- Social Contacts -->
-		<div class="social-links">
-			<ul class="list-inline">
-				<li class="list-inline-item"><a href="https://themefisher.com/"><i class="bi-facebook"></i></a></li>
-				<li class="list-inline-item"><a href="https://themefisher.com/"><i class="bi-twitter"></i></a></li>
-				<li class="list-inline-item"><a href="https://themefisher.com/"><i class="bi-instagram"></i></a></li>
-			</ul>
-		</div>
+	<div class="social-links">
+		<ul class="list-inline">
+			<cite>Head Of Marketing &emsp;</cite>
+			<li class="list-inline-item"><a href=""><i class="bi-github"></i></a></li>
+			<li class="list-inline-item"><a href=""><i class="bi-twitter"></i></a></li>
+			<li class="list-inline-item"><a href=""><i class="bi-envelope"></i></a></li>
+		</ul>
 	</div>
-	<!-- Name -->
-	<h3>Jonathon Andrew</h3>
-	<!-- Position -->
-	<cite>Head Of Marketing</cite>
 	<!-- Description -->
 	<p>Vivamus magna justo, lacinia eget consectetur sed, convallis at tellus. Vestibulum ac diam sit amet quam vehicula elementum sed sit amet dui. Vivamus suscipit tortor eget felis porttitor volutpat.</p>
 </div>
@@ -316,56 +248,6 @@ FACEBOOK: https://www.facebook.com/themefisher
 	</div>
 </section>
 <!--====  End of Marketing Team  ====-->
-
-
-<!--==================================
-=            Feature Team            =
-===================================-->
-<section class="founders section pt-0">
-	<div class="container">
-		<div class="row">
-			<div class="col-lg-6">
-				<!-- Featured Member -->
-<div class="founder">
-	<!-- Member Image -->
-	<img class="w-100" src="images/team/featured-person-01.jpg" alt="featured-member">
-	<!-- Name -->
-	<h2>Elon Musk</h2>
-	<!-- position -->
-	<cite>Founder & CEO</cite>
-	<!-- Description -->
-	<p>Vivamus magna justo, lacinia eget consectetur sed, convallis at tellus. Vestibulum ac diam sit amet quam vehicula elementum sed sit amet dui. Vivamus suscipit tortor eget felis porttitor volutpat. Sed porttitor lectus nibh. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Donec velit neque, auctor sit amet aliquam vel, ullamcorper sit amet ligula. Proin eget tortor risus. Nulla porttitor accumsan tincidunt.</p>
-	<!-- Social Sites -->
-	<ul class="list-inline social-links">
-		<li class="list-inline-item"><a href="https://themefisher.com/"><i class="bi-facebook"></i></a></li>
-		<li class="list-inline-item"><a href="https://themefisher.com/"><i class="bi-twitter"></i></a></li>
-		<li class="list-inline-item"><a href="https://themefisher.com/"><i class="bi-instagram"></i></a></li>
-	</ul>
-</div>
-			</div>
-			<div class="col-lg-6">
-				<!-- Featured Member -->
-<div class="founder">
-	<!-- Member Image -->
-	<img class="w-100" src="images/team/featured-person-02.jpg" alt="featured-member">
-	<!-- Name -->
-	<h2>Sergey Brin</h2>
-	<!-- position -->
-	<cite>Founder & CEO</cite>
-	<!-- Description -->
-	<p>Vivamus magna justo, lacinia eget consectetur sed, convallis at tellus. Vestibulum ac diam sit amet quam vehicula elementum sed sit amet dui. Vivamus suscipit tortor eget felis porttitor volutpat. Sed porttitor lectus nibh. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Donec velit neque, auctor sit amet aliquam vel, ullamcorper sit amet ligula. Proin eget tortor risus. Nulla porttitor accumsan tincidunt.</p>
-	<!-- Social Sites -->
-	<ul class="list-inline social-links">
-		<li class="list-inline-item"><a href="https://themefisher.com/"><i class="bi-facebook"></i></a></li>
-		<li class="list-inline-item"><a href="https://themefisher.com/"><i class="bi-twitter"></i></a></li>
-		<li class="list-inline-item"><a href="https://themefisher.com/"><i class="bi-instagram"></i></a></li>
-	</ul>
-</div>
-			</div>
-		</div>
-	</div>
-</section>
-<!--====  End of Feature Team  ====-->
 
 <!--============================
 =            Footer            =
@@ -381,7 +263,7 @@ FACEBOOK: https://www.facebook.com/themefisher
         </div>
       </div>
     </div>
-  </div>
+	</div>
 </footer>
 
   <!-- To Top -->
