--- a/index.html
+++ b/index.html
@@ -137,80 +137,6 @@ FACEBOOK: https://www.facebook.com/themefisher
 	</div>
 </section>
 
-<!--==================================
-=            Feature Grid            =
-===================================-->
-<section class="feature section pt-0 bg-gray">
-	<div class="container">
-		<div class="row">
-			<div class="col-lg-6 ml-auto justify-content-center">
-				<!-- Feature Mockup -->
-				<div class="image-content" data-aos="fade-right">
-					<img class="img-fluid" src="images/feature/sis3.png" alt="JHU SIS Class Search">
-				</div>
-			</div>
-			<div class="col-lg-6 mr-auto align-self-center">
-				<div class="feature-content">
-					<!-- Feature Title -->
-					<h2>Forget about confusing class searches</h2>
-					<!-- Feature Description -->
-					<p class="desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-						labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-						aliquip ex ea commodo consequat.</p>
-				</div>
-				<!-- Testimonial Quote -->
-				<div class="testimonial">
-					<p>
-						"Yabadabbadoo Old Navy."
-					</p>
-					<ul class="list-inline meta">
-						<li class="list-inline-item">
-							<img src="images/testimonial/feature-testimonial-thumb.jpg" alt="">
-						</li>
-						<li class="list-inline-item">LeBron James, nba.com</li>
-					</ul>
-				</div>
-			</div>
-		</div>
-	</div>
-</section>
-
-<section class="feature section pt-0 bg-gray">
-	<div class="container">
-		<div class="row">
-			<div class="col-lg-6 ml-auto align-self-center">
-				<div class="feature-content">
-					<!-- Feature Title -->
-					<h2>Don't worry about time-wasting degree audits</h2>
-					<!-- Feature Description -->
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-						dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
-						ea commodo consequat.</p>
-				</div>
-				<!-- Testimonial Quote -->
-				<div class="testimonial">
-					<p>
-						"A next-generation college experience. More innovative than the iPhone was for productivity."
-					</p>
-					<ul class="list-inline meta">
-						<li class="list-inline-item">
-							<img src="images/testimonial/feature-testimonial-thumb.jpg" alt="">
-						</li>
-						<li class="list-inline-item">Steve Jobs, apple.com</li>
-					</ul>
-				</div>
-			</div>
-			<div class="col-lg-6 mr-auto justify-content-center">
-				<!-- Feature mockup -->
-				<div class="image-content" data-aos="fade-left">
-					<img class="img-fluid" src="images/feature/sis2.png" alt="JHU SIS Degree Audit">
-				</div>
-			</div>
-		</div>
-	</div>
-</section>
-<!--====  End of Feature Grid  ====-->
-
 <!--==============================
 =            Services            =
 ===============================-->
@@ -296,7 +222,7 @@ FACEBOOK: https://www.facebook.com/themefisher
 				<ul class="list-inline">
 					<li class="list-inline-item">
 						<a href="app.html" class="btn btn-rounded-icon font-weight-bold">
-							GET STARTED
+							Get Started
 						</a>
 					</li>
 				</ul>
@@ -310,13 +236,9 @@ FACEBOOK: https://www.facebook.com/themefisher
 =============================-->
 <footer>
   <div class="footer-main">
-    <div class="container">
-      <div class="row">
-        <div style="margin:auto;">
-          <div class="block">
-						<a href="https://www.github.com/stickms/hophacks23" class="btn-rounded-icon font-weight-bold">Github</a>
-          </div>
-        </div>
+    <div class="container row" style="margin:auto;">
+      <div class="row" style="margin:auto;">
+				<a href="https://www.github.com/stickms/hophacks23" class="btn-rounded-icon font-weight-bold">Github</a>
       </div>
     </div>
   </div>
