Disabled button when prompt is empty Changed navbar redirect for 'about' page

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ FACEBOOK: https://www.facebook.com/themefisher
   <!-- Basic Page Needs
   ================================================== -->
   <meta charset="utf-8">
-  <title>Jayway</title>
+  <title>Jayway | Course Selection Reinvented</title>
 
   <!-- Mobile Specific Metas
   ================================================== -->
@@ -62,7 +62,7 @@ FACEBOOK: https://www.facebook.com/themefisher
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav ml-auto">
         <li class="nav-item">
-          <a class="nav-link font-weight-bold" href="#about">about</a>
+          <a class="nav-link font-weight-bold" href="index.html#about">about</a>
         </li>
         <li class="nav-item">
           <a class="nav-link font-weight-bold" href="team.html">team</a>
