--- a/team.html
+++ b/team.html
@@ -62,7 +62,7 @@ FACEBOOK: https://www.facebook.com/themefisher
 		<div class="collapse navbar-collapse" id="navbarNav">
 			<ul class="navbar-nav ml-auto">
 				<li class="nav-item">
-					<a class="nav-link font-weight-bold" href="#about">about</a>
+					<a class="nav-link font-weight-bold" href="index.html#about">about</a>
 				</li>
 				<li class="nav-item">
 					<a class="nav-link font-weight-bold" href="team.html">team</a>
@@ -124,7 +124,7 @@ FACEBOOK: https://www.facebook.com/themefisher
 		</ul>
 	</div>
 	<!-- Description -->
-	<p>Vivamus magna justo, lacinia eget consectetur sed, convallis at tellus. Vestibulum ac diam sit amet quam vehicula elementum sed sit amet dui. Vivamus suscipit tortor eget felis porttitor volutpat.</p>
+	<p>Meet Mahmoud Said, the "Web Wizard," who claimed to have invented the world's first digital sandwich during a late-night coding spree. His love for coding is rivaled only by his obsession with socks—each day a different pair, each line of code a different challenge. Mahmoud once tried to build a website for cats to rate their owners, but the cats just knocked his keyboard off the table. Nevertheless, he's the guy who can turn your website dreams into reality, as long as you promise to bring snacks and wear mismatched socks!</p>
 </div>
 			</div>
 			<div class="col-lg-4 col-md-6">
