Removed slick dependency Styling updated for 404, team, and main pages Removed some unused code

--- a/index.html
+++ b/index.html
@@ -36,8 +36,6 @@ FACEBOOK: https://www.facebook.com/themefisher
   
   <!-- PLUGINS CSS STYLE -->
   <link rel="stylesheet" href="plugins/bootstrap/bootstrap.min.css">
-  <link rel="stylesheet" href="plugins/slick/slick.css">
-  <link rel="stylesheet" href="plugins/slick/slick-theme.css">
   <link rel="stylesheet" href="plugins/fancybox/jquery.fancybox.min.css">
   <link rel="stylesheet" href="plugins/aos/aos.css">
 
@@ -114,22 +112,19 @@ FACEBOOK: https://www.facebook.com/themefisher
 		<div class="rounded shadow p-5 bg-gray">
 			<div class="row">
 				<div class="col-lg-4 col-md-6 mt-5 mt-md-0 text-center">
-					<i class="bi-1-circle text-primary h1"></i>
-					<h3 class="mt-4 text-capitalize h5 ">themes made easy</h3>
-					<p class="regular text-muted">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam non, recusandae
-						tempore ipsam dignissimos molestias.</p>
+					<i class="bi-pencil-square h1" style="color:#5D576B"></i>
+					<h3 class="mt-4 h5 ">Describe your ideal course</h3>
+					<p class="regular text-muted">Using generative AI, our model will automatically iterate through thousands of JHU courses </p>
 				</div>
 				<div class="col-lg-4 col-md-6 mt-5 mt-md-0 text-center">
-					<i class="bi-2-circle text-primary h1"></i>
-					<h3 class="mt-4 text-capitalize h5 ">powerful design</h3>
-					<p class="regular text-muted">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam non, recusandae
-						tempore ipsam dignissimos molestias.</p>
+					<i class="bi-sort-up-alt h1" style="color:#5D576B"></i>
+					<h3 class="mt-4 h5 ">Filter through your interests</h3>
+					<p class="regular text-muted">Narrow your options based on reputation, difficulty, and workload, and even limit courses based on age</p>
 				</div>
 				<div class="col-lg-4 col-md-12 mt-5 mt-lg-0 text-center">
-					<i class="bi-3-circle text-primary h1"></i>
-					<h3 class="mt-4 text-capitalize h5 ">creative content</h3>
-					<p class="regular text-muted">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam non, recusandae
-						tempore ipsam dignissimos molestias.</p>
+					<i class="bi-check-circle h1" style="color:#5D576B"></i>
+					<h3 class="mt-4 h5 ">Get your new schedule</h3>
+					<p class="regular text-muted">No more time wasted sifting through countless course descriptions and professor evaluations</p>
 					</p>
 				</div>
 			</div>
@@ -145,67 +140,9 @@ FACEBOOK: https://www.facebook.com/themefisher
 		<div class="row">
 			<div class="col-lg-12">
 				<div class="section-title">
-					<h2>An Interface For Lifestyle</h2>
-					<p><a href="https://themefisher.com/products/small-apps-free-app-landing-page-template/">Small Apps</a> makes
-						it easy to stay on top of your Life Style. No late tasks. No gimmicks.</p>
-				</div>
-			</div>
-		</div>
-		<div class="row no-gutters">
-			<div class="col-lg-6 align-self-center">
-				<!-- Feature Image -->
-				<div class="service-thumb left" data-aos="fade-right">
-					<img class="img-fluid" src="images/feature/iphone-ipad.jpg" alt="iphone-ipad">
-				</div>
-			</div>
-			<div class="col-lg-5 mr-auto align-self-center">
-				<div class="service-box">
-					<div class="row align-items-center">
-						<div class="col-md-6 col-xs-12">
-							<!-- Service 01 -->
-							<div class="service-item">
-								<!-- Icon -->
-								<i class="bi-bookmark"></i>
-								<!-- Heading -->
-								<h3>Easy Prototyping</h3>
-								<!-- Description -->
-								<p>Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Curabitur aliquet quam id dui</p>
-							</div>
-						</div>
-						<div class="col-md-6 col-xs-12">
-							<!-- Service 01 -->
-							<div class="service-item">
-								<!-- Icon -->
-								<i class="bi-heart-pulse"></i>
-								<!-- Heading -->
-								<h3>Sensor Bridge</h3>
-								<!-- Description -->
-								<p>Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Curabitur aliquet quam id dui</p>
-							</div>
-						</div>
-						<div class="col-md-6 col-xs-12">
-							<!-- Service 01 -->
-							<div class="service-item">
-								<!-- Icon -->
-								<i class="bi-bar-chart"></i>
-								<!-- Heading -->
-								<h3>Strategist</h3>
-								<!-- Description -->
-								<p>Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Curabitur aliquet quam id dui</p>
-							</div>
-						</div>
-						<div class="col-md-6 col-xs-12">
-							<!-- Service 01 -->
-							<div class="service-item">
-								<!-- Icon -->
-								<i class="bi-box-fill"></i>
-								<!-- Heading -->
-								<h3>Art Direction</h3>
-								<!-- Description -->
-								<p>Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Curabitur aliquet quam id dui</p>
-							</div>
-						</div>
-					</div>
+					<h2>Introducing Jayway</h2>
+					<p>Jayway uses a generative AI model to reinvent the college course selection process. <br>
+						We empower students to better craft their college experience around their personalized interests and needs.</p>
 				</div>
 			</div>
 		</div>
@@ -245,15 +182,14 @@ FACEBOOK: https://www.facebook.com/themefisher
 </footer>
 
 
-  <!-- To Top -->
-  <div class="scroll-top-to">
-    <i class="bi-arrow-up-short"></i>
-  </div>
+<!-- To Top -->
+<div class="scroll-top-to">
+	<a class="scroll-top-a" href="#"><i class="bi-arrow-up-short"></i></a>
+</div>
   
   <!-- JAVASCRIPTS -->
   <script src="plugins/jquery/jquery.min.js"></script>
   <script src="plugins/bootstrap/bootstrap.min.js"></script>
-  <script src="plugins/slick/slick.min.js"></script>
   <script src="plugins/fancybox/jquery.fancybox.min.js"></script>
   <script src="plugins/aos/aos.js"></script>
 
