--- a/404.html
+++ b/404.html
@@ -60,7 +60,7 @@ FACEBOOK: https://www.facebook.com/themefisher
 			<h3>Page Not Found</h3>
 			<p>The link you clicked may be broken or the
 				<br>page may have been removed.</p>
-			<a href="index.html" class="btn btn-main-md">visit homepage</a>
+			<a href="index.html" class="btn btn-main-md">Go Back</a>
 		</div>
 	</div>
 </section>
