--- a/team.html
+++ b/team.html
@@ -36,8 +36,6 @@ FACEBOOK: https://www.facebook.com/themefisher
   
   <!-- PLUGINS CSS STYLE -->
   <link rel="stylesheet" href="plugins/bootstrap/bootstrap.min.css">
-  <link rel="stylesheet" href="plugins/slick/slick.css">
-  <link rel="stylesheet" href="plugins/slick/slick-theme.css">
   <link rel="stylesheet" href="plugins/fancybox/jquery.fancybox.min.css">
   <link rel="stylesheet" href="plugins/aos/aos.css">
 
@@ -53,7 +51,7 @@ FACEBOOK: https://www.facebook.com/themefisher
 <body class="body-wrapper" data-spy="scroll" data-target=".privacy-nav">
 
 
-<nav class="navbar navbar-expand main-nav navbar-expand-lg px-2 px-sm-0 py-2 py-lg-0">
+<nav class="navbar navbar-expand main-nav navbar-expand-lg px-2 px-sm-0 py-2 py-lg-0" style="background-color:#FFFAE3;">
 	<div class="container">
 		<a class="navbar-brand" href="index.html"><img src="images/logo.png" alt="logo"></img></a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
@@ -254,27 +252,22 @@ FACEBOOK: https://www.facebook.com/themefisher
 =============================-->
 <footer>
   <div class="footer-main">
-    <div class="container">
-      <div class="row">
-        <div style="margin:auto;">
-          <div class="block">
-						<a href="https://www.github.com/stickms/hophacks23" class="btn-rounded-icon font-weight-bold">Github</a>
-          </div>
-        </div>
+    <div class="container row" style="margin:auto;">
+      <div class="row" style="margin:auto;">
+				<a href="https://www.github.com/stickms/hophacks23" class="btn-rounded-icon font-weight-bold">Github</a>
       </div>
     </div>
-	</div>
+  </div>
 </footer>
 
-  <!-- To Top -->
-  <div class="scroll-top-to">
-    <i class="bi-arrow-up-short"></i>
-  </div>
+<!-- To Top -->
+<div class="scroll-top-to">
+	<a class="scroll-top-a" href="#"><i class="bi-arrow-up-short"></i></a>
+</div>
   
   <!-- JAVASCRIPTS -->
   <script src="plugins/jquery/jquery.min.js"></script>
   <script src="plugins/bootstrap/bootstrap.min.js"></script>
-  <script src="plugins/slick/slick.min.js"></script>
   <script src="plugins/fancybox/jquery.fancybox.min.js"></script>
   <script src="plugins/syotimer/jquery.syotimer.min.js"></script>
   <script src="plugins/aos/aos.js"></script>
